salesforce/force-app/main/default/objects/RideRequest__c/RideRequest__c.object-meta.xml
<CustomObject>
  <label>Ride Request</label>
  <pluralLabel>Ride Requests</pluralLabel>
  <nameField>
    <label>Ride Request Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>