salesforce/force-app/main/default/objects/RideRequest__c/fields/DiscountAmount__c.field-meta.xml
<CustomField>
  <fullName>DiscountAmount__c</fullName>
  <label>Discount Amount</label>
  <type>Currency</type>
  <precision>10</precision>
  <scale>2</scale>
</CustomField>