salesforce/force-app/main/default/objects/RideRequest__c/fields/DropLabel__c.field-meta.xml
<CustomField>
  <fullName>DropLabel__c</fullName>
  <label>Drop Label</label>
  <type>Text</type>
  <length>255</length>
</CustomField>