salesforce/force-app/main/default/objects/RideRequest__c/fields/DropLat__c.field-meta.xml
<CustomField>
  <fullName>DropLat__c</fullName>
  <label>Drop Lat</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>6</scale>
</CustomField>