salesforce/force-app/main/default/objects/RideRequest__c/fields/DropLng__c.field-meta.xml
<CustomField>
  <fullName>DropLng__c</fullName>
  <label>Drop Lng</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>6</scale>
</CustomField>