salesforce/force-app/main/default/objects/RideRequest__c/fields/ExternalRequestId__c.field-meta.xml
<CustomField>
  <fullName>ExternalRequestId__c</fullName>
  <label>External Request Id</label>
  <type>Text</type>
  <length>80</length>
  <externalId>true</externalId>
  <unique>true</unique>
  <required>true</required>
</CustomField>