salesforce/force-app/main/default/objects/RideRequest__c/fields/Fare__c.field-meta.xml
<CustomField>
  <fullName>Fare__c</fullName>
  <label>Fare</label>
  <type>Currency</type>
  <precision>10</precision>
  <scale>2</scale>
</CustomField>