salesforce/force-app/main/default/objects/RideRequest__c/fields/FinalFare__c.field-meta.xml
<CustomField>
  <fullName>FinalFare__c</fullName>
  <label>Final Fare</label>
  <type>Currency</type>
  <precision>10</precision>
  <scale>2</scale>
  <formula>MAX(0, BLANKVALUE(Fare__c, 0) - BLANKVALUE(DiscountAmount__c, 0))</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>