salesforce/force-app/main/default/objects/RideRequest__c/fields/PickupLabel__c.field-meta.xml
<CustomField>
  <fullName>PickupLabel__c</fullName>
  <label>Pickup Label</label>
  <type>Text</type>
  <length>255</length>
</CustomField>