salesforce/force-app/main/default/objects/RideRequest__c/fields/PickupLat__c.field-meta.xml
<CustomField>
  <fullName>PickupLat__c</fullName>
  <label>Pickup Lat</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>6</scale>
</CustomField>