salesforce/force-app/main/default/objects/RideRequest__c/fields/PickupLng__c.field-meta.xml
<CustomField>
  <fullName>PickupLng__c</fullName>
  <label>Pickup Lng</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>6</scale>
</CustomField>