salesforce/force-app/main/default/objects/RideRequest__c/fields/PromoCode__c.field-meta.xml
<CustomField>
  <fullName>PromoCode__c</fullName>
  <label>Promo Code</label>
  <type>Lookup</type>
  <referenceTo>PromoCode__c</referenceTo>
  <relationshipLabel>Ride Requests</relationshipLabel>
  <relationshipName>RideRequests</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
</CustomField>