salesforce/force-app/main/default/objects/RideRequest__c/fields/PromoUsed__c.field-meta.xml
<CustomField>
  <fullName>PromoUsed__c</fullName>
  <label>Promo Used</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>