salesforce/force-app/main/default/objects/RideRequest__c/fields/Ride__c.field-meta.xml
<CustomField>
  <fullName>Ride__c</fullName>
  <label>Ride</label>
  <type>Lookup</type>
  <referenceTo>Ride__c</referenceTo>
  <relationshipLabel>Ride Requests</relationshipLabel>
  <relationshipName>RideRequests</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
  <required>true</required>
</CustomField>