salesforce/force-app/main/default/objects/RideRequest__c/fields/Rider__c.field-meta.xml
<CustomField>
  <fullName>Rider__c</fullName>
  <label>Rider</label>
  <type>Lookup</type>
  <referenceTo>AppUser__c</referenceTo>
  <relationshipLabel>Ride Requests</relationshipLabel>
  <relationshipName>RideRequestsByRider</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
  <required>true</required>
</CustomField>