salesforce/force-app/main/default/objects/RideRequest__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Requested</fullName><default>true</default><label>Requested</label></value>
      <value><fullName>Waitlisted</fullName><default>false</default><label>Waitlisted</label></value>
      <value><fullName>Accepted</fullName><default>false</default><label>Accepted</label></value>
      <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
      <value><fullName>Withdrawn</fullName><default>false</default><label>Withdrawn</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>